# counter

./: .dockerignore  Cargo.toml  Containerfile  README.md  podman-compose.yml
src/: dummy.rs  main.rs
