[package]
name = "counter"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "counter"
path = "src/main.rs"

[dependencies]
actix-web = "3"
serde = "1.0.132"

[dependencies.mongodb]
version = "2.1.0"
default-features = false
features = ["tokio-runtime"]
